[gd_scene load_steps=8 format=3 uid="uid://cj8h3xv7xqr5d"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_h2x3k"]
[ext_resource type="PackedScene" uid="uid://bjfwmtyvyx8g3" path="res://scenes/player.tscn" id="2_8x9y1"]
[ext_resource type="Script" path="res://scripts/ground_spawner.gd" id="3_y2z1x"]
[ext_resource type="PackedScene" uid="uid://c3w3wqkqjf0fm" path="res://scenes/ground.tscn" id="4_z1x2y"]
[ext_resource type="Script" path="res://scripts/obstacle_spawner.gd" id="5_x1y2z"]
[ext_resource type="PackedScene" uid="uid://d1k2a3shyf7yg" path="res://scenes/obstacle.tscn" id="6_y2z3x"]
[ext_resource type="PackedScene" uid="uid://bw8k7m3pqr5t1" path="res://scenes/parallax_background.tscn" id="7_p4r5x"]
[ext_resource type="Script" path="res://scripts/parallax_controller.gd" id="8_c6t7r"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2x3k")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="ParallaxBackground" parent="." instance=ExtResource("7_p4r5x")]
script = ExtResource("8_c6t7r")

[node name="Player" parent="." instance=ExtResource("2_8x9y1")]
position = Vector2(200, 540)

[node name="GroundSpawner" type="Node2D" parent="."]
script = ExtResource("3_y2z1x")
ground_scene = ExtResource("4_z1x2y")

[node name="ObstacleSpawner" type="Node2D" parent="."]
script = ExtResource("5_x1y2z")
obstacle_scene = ExtResource("6_y2z3x")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart"
